--- a/MVC.Budget/MVC.Budget/appsettings.json
+++ b/MVC.Budget/MVC.Budget/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=Budget;Trusted_Connection=True;Encrypt=False;"
+  },
   "AllowedHosts": "*"
 }
